--- a/scss/_toolspage.scss
+++ b/scss/_toolspage.scss
@@ -81,7 +81,7 @@
   .editor-loader {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
