--- a/scss/_toolspage.scss
+++ b/scss/_toolspage.scss
@@ -32,6 +32,15 @@
   }
   .rest {
     flex: 1;
+    .document-name {
+      .input {
+        font-weight: 400;
+        &:focus {
+          outline: none;
+          caret-color: $pdf-color;
+        }
+      }
+    }
   }
   // overlay
   .overlay {
@@ -83,6 +92,18 @@
     }
   }
 }
+.editor-loader {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  top: 0;
+  left: 0;
+}
 .md-2pdf {
   display: flex;
   @media (max-width: 600px) {
@@ -96,16 +117,6 @@
     resize: none;
   }
 
-  .editor-loader {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-  }
   .react-markdown-container {
     flex: 0 1 50%;
     padding: 15px;
