--- a/scss/_toolspage.scss
+++ b/scss/_toolspage.scss
@@ -28,6 +28,20 @@
     }
     .tool-bar-button {
       @include extend("btn");
+      &.input {
+        @include extend("position-relative");
+        input {
+          @include extend("position-absolute");
+          outline: 1px solid;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          opacity: 0;
+          z-index: 0;
+          cursor: pointer;
+        }
+      }
     }
   }
   .rest {
