--- a/scss/_toolspage.scss
+++ b/scss/_toolspage.scss
@@ -4,9 +4,11 @@
       background-color: $color;
 
       &:hover {
-        @if $key == "PDF-to-PDF-A" or $key == "pdf-to-markdown" {
+        @if $key =="PDF-to-PDF-A" or $key =="pdf-to-markdown" {
           background-color: lighten($color, 14%);
-        } @else {
+        }
+
+        @else {
           background-color: darken($color, 13%);
         }
       }
@@ -18,18 +20,24 @@
   ::-webkit-scrollbar {
     display: none;
   }
+
   display: flex;
+
   .tool-bar {
     flex: 0 1 7.333%;
     @include extend("d-flex flex-column");
+
     .icon {
       width: 3em;
       height: 3em;
     }
+
     .tool-bar-button {
       @include extend("btn");
+
       &.input {
         @include extend("position-relative");
+
         input {
           @include extend("position-absolute");
           outline: 1px solid;
@@ -44,11 +52,14 @@
       }
     }
   }
+
   .rest {
     flex: 1;
+
     .document-name {
       .input {
         font-weight: 400;
+
         &:focus {
           outline: none;
           caret-color: $pdf-color;
@@ -56,6 +67,7 @@
       }
     }
   }
+
   // overlay
   .overlay {
     position: absolute;
@@ -94,18 +106,22 @@
       cursor: pointer;
     }
   }
+
   .download-page {
     min-height: 50vh;
+
     .back-btn {
       display: flex;
       width: 40px;
       height: 40px;
+
       .icon {
         flex: 1;
       }
     }
   }
 }
+
 .editor-loader {
   position: absolute;
   width: 100%;
@@ -118,11 +134,14 @@
   top: 0;
   left: 0;
 }
+
 .md-2pdf {
   display: flex;
+
   @media (max-width: 600px) {
     flex-wrap: wrap;
   }
+
   height: 100%;
 
   .editor {
@@ -136,17 +155,25 @@
     padding: 15px;
     max-height: 100vh;
     overflow: auto;
+
+    #_html {
+      @include extend("w-100 h-100");
+      overflow: auto;
+    }
   }
+
   .floating-button-container {
     position: fixed;
     bottom: 20px;
     right: 20px;
   }
+
   .download-button {
     display: flex;
     align-items: center;
     justify-content: center;
   }
+
   .download-icon {
     height: 1.25rem;
     width: 1.25rem;
@@ -159,6 +186,7 @@
   font-size: 2em;
   cursor: pointer;
 }
+
 .upload-btn,
 .submit-btn,
 .download-btn,
@@ -169,19 +197,24 @@
 .translate-pdf {
   .translate-file-selector {
     height: 50vh;
+
     %flex-centered {
       @include extend("flex justify-content-center align-items-center");
     }
+
     .dropzone {
       @extend %flex-centered;
     }
+
     .devider {
       width: 2px;
       background-color: #dee2e6;
     }
+
     .file-selector {
       @extend %flex-centered;
     }
+
     .upload-btn {
       input {
         opacity: 0;
@@ -189,6 +222,7 @@
         top: 0;
         left: 0;
         @include extend("w-100 h-100");
+
         &::-webkit-file-upload-button {
           @include extend("w-100 h-100 d-block");
           cursor: pointer;
