--- a/src/partials/BaseLayout.astro
+++ b/src/partials/BaseLayout.astro
@@ -42,8 +42,8 @@ if (pathname.startsWith("/ar")) {
 import { Schema } from "astro-seo-schema";
 import "../styles/global.css";
 import "../../index.scss";
-import Navbar from "pdfequips-navbar";
-import { Footer } from "pdfequips-footer/components/Footer.tsx";
+import Navbar from "pdfequips-navbar/NavBar";
+import { Footer } from "pdfequips-footer/components/Footer";
 import { howToSchema } from "../how-to/how-to";
 import AstroSeo from "./AstroSeo.astro";
 ---
