--- a/scss/_display-file.scss
+++ b/scss/_display-file.scss
@@ -13,7 +13,6 @@
   align-items: stretch;
 
   .drag-element {
-
     .image-tooltip,
     .item-tooltip {
       height: 100%;
@@ -77,7 +76,40 @@
 
   .card.item {
     height: 100%;
+    @include extend("card");
+    .card-body {
+      @include extend("card-body d-flex flex-column");
+      .img-fluid-custom {
+        @include extend("object-fit-contain rounded item-img");
+      }
+    }
     @extend %show-action;
+  }
+
+  .action-div {
+    &.justify-content-end {
+      @include extend("justify-content-end");
+    }
+    &.justify-content-between {
+      @include extend("justify-content-between");
+    }
+  }
+
+  .password-input-row {
+    z-index: 1;
+    @include extend("mt-5");
+    .input-group {
+      @include extend("input-group px-1");
+      .form-control {
+        @include extend("form-control");
+      }
+      .show-password {
+        @include extend("btn btn-outline-secondary btn-sm");
+      }
+      .submit-btn {
+        @include extend("btn btn-primary");
+      }
+    }
   }
 
   // .action-div {
