--- a/scss/_toolspage.scss
+++ b/scss/_toolspage.scss
@@ -1,13 +1,13 @@
 @mixin generateColorClasses($map) {
   @each $key, $color in $map {
     &.#{$key} {
-      background-color: $color;
+      background-color: $color !important;
 
       &:hover {
         @if $key == "PDF-to-PDF-A" or $key == "pdf-to-markdown" {
-          background-color: lighten($color, 14%);
+          background-color: lighten($color, 14%) !important;
         } @else {
-          background-color: darken($color, 13%);
+          background-color: darken($color, 13%) !important;
         }
       }
     }
@@ -15,8 +15,15 @@
 }
 
 .tools-page {
-  // overlay
+  @include extend("container-fluid position-relative");
+  .title {
+    @include extend("display-3");
+  }
+  .description {
+    @include extend("lead");
+  }
   .overlay {
+    @include extend("display-4");
     position: absolute;
     inset: 0px;
     background-color: rgb(0 0 0 / 80%);
@@ -57,14 +64,28 @@
     }
   }
   .download-page {
+    @include extend(
+      "flex-column align-items-center justify-content-center text-center my-1"
+    );
+    .download-btn-container {
+      @include extend(
+        "d-flex align-items-center justify-content-between rounded-circle"
+      );
+    }
     min-height: 50vh;
     .back-btn {
+      @include extend("btn btn-dark rounded-circle mr-2 align-items-center");
       display: flex;
       width: 40px;
       height: 40px;
       .icon {
         flex: 1;
       }
+    }
+    .download-btn {
+      @include extend(
+        "btn btn-lg text-white position-relative overflow-hidden"
+      );
     }
   }
 }
@@ -109,34 +130,12 @@
   @include generateColorClasses($color-map);
 }
 
-.translate-pdf {
-  .translate-file-selector {
-    height: 50vh;
-    %flex-centered {
-      @include extend("flex justify-content-center align-items-center");
-    }
-    .dropzone {
-      @extend %flex-centered;
-    }
-    .devider {
-      width: 2px;
-      background-color: #dee2e6;
-    }
-    .file-selector {
-      @extend %flex-centered;
-    }
-    .upload-btn {
-      input {
-        opacity: 0;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        @include extend("w-100 h-100");
-        &::-webkit-file-upload-button {
-          @include extend("w-100 h-100 d-block");
-          cursor: pointer;
-        }
-      }
-    }
-  }
+.upload-btn {
+  @include extend("btn btn-lg text-white position-relative overflow-hidden");
+}
+
+.submit-btn {
+  @include extend(
+    "btn btn-lg text-white position-relative overflow-hidden grid-footer"
+  );
 }
