--- a/index.scss
+++ b/index.scss
@@ -136,6 +136,8 @@ a.dropdown-item {
     img {
       user-select: none;
       -webkit-user-drag: none;
+      height: auto;
+      max-width: 100%;
     }
   }
 
