--- a/index.scss
+++ b/index.scss
@@ -190,3 +190,7 @@ a.dropdown-item {
 .center-item {
   @include extend("row justify-content-center");
 }
+
+a.no-underline {
+  @include extend("text-decoration-none");
+}
