--- a/src/partials/BaseLayout.astro
+++ b/src/partials/BaseLayout.astro
@@ -44,7 +44,7 @@ import "../styles/global.css";
 import "../../index.scss";
 import Navbar from "pdfequips-navbar/NavBar";
 import { Footer } from "pdfequips-footer/components/Footer";
-import { howToSchema } from "../how-to/how-to";
+import { MarkdownToPDFHOWTO } from "../how-to";
 import AstroSeo from "./AstroSeo.astro";
 ---
 
@@ -52,12 +52,14 @@ import AstroSeo from "./AstroSeo.astro";
 <html lang={lang} dir={dir}>
   <head>
     <AstroSeo {...{ ...seoConfig, title: seoConfig.seoTitle }} />
-    <Schema item={howToSchema} />
+    <Schema item={MarkdownToPDFHOWTO} />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
