--- a/scss/_toolspage.scss
+++ b/scss/_toolspage.scss
@@ -70,8 +70,9 @@
       }
       .preview {
         @include extend(
-          "btn btn-light d-none justify-content-between align-items-center"
+          "btn btn-light d-none justify-content-between align-items-center bg-white"
         );
+        z-index: 5;
 
         @include xs {
           display: flex !important;
