--- a/scss/_editpage.scss
+++ b/scss/_editpage.scss
@@ -218,6 +218,10 @@
 }
 
 .submit-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
   @each $key, $color in $color-map {
     &.#{$key} {
       $r: red($color);
